--- a/_data/organization-members.yml
+++ b/_data/organization-members.yml
@@ -171,7 +171,7 @@
 
   - id: "kristyna-simonova"
     name: "Kristýna Šimonová"
-    summary: "Spolupracujovala na materiálech týkajících se globálních úmluv v oblasti biodiverzity."
+    summary: "Spolupracovala na materiálech týkajících se globálních úmluv v oblasti biodiverzity."
 
   - id: "karolina-stollova"
     name: "Karolína Štollová"
