--- a/_data/organization-members.yml
+++ b/_data/organization-members.yml
@@ -13,14 +13,6 @@
     linkedin: "https://www.linkedin.com/in/ondr%C3%A1%C5%A1-p%C5%99ibyla-b4b90022/"
     twitter: "https://twitter.com/OPribyla"
 
-  - id: "kristina-studena"
-    name: "Kristina Studená"
-    position: "Koordinátorka projektů, týmu a zázemí"
-    summary: "Stará se o efektivní fungování celého týmu. Její role zahrnuje správu projektů, koordinaci interních procesů a péči o dárce a dárkyně. Se zkušenostmi v řízení a komunikaci přináší do týmu organizační schopnosti i strategický přístup."
-    img: "kristina-studena.jpg"
-    email: "kristina.studena@faktaoklimatu.cz"
-    linkedin: "https://www.linkedin.com/in/kristina-studen%C3%A1-a18b43270/"
-
   - id: "kristi-psorn-zakopcanova"
     name: "Kristi Pšorn Zákopčanová"
     name_formal: "Kristína Pšorn Zákopčanová"
@@ -157,6 +149,10 @@
 
   - name: "Jan Krajhanzl"
     summary: "Konzultuje, jak k veřejnosti komunikovat náročné téma změny klimatu. Tuto oblast odborně zkoumá se svým týmem na univerzitě a v [Institutu 2050](https://institut2050.cz/)."
+
+  - id: "kristina-studena"
+    name: "Kristina Studená"
+    summary: "Starala se o efektivní fungování týmu, včetně správy projektů, koordinaci interních procesů a péči o dárce a dárkyně."
 
   - id: "marek-krcal"
     name: "Marek Krčál"
