Drobné úpravy Petrova medailonku

--- a/_data/organization-members.yml
+++ b/_data/organization-members.yml
@@ -103,8 +103,7 @@
 
   - id: "petr-danis"
     name: "Petr Daniš"
-    position: "Analytik"
-    summary: "Píše a pomáhá zaměřovat texty na podstatné, přednáší a vystupuje, podporuje vedení organizace. Předtím se věnoval environmentálnímu a klimatickému vzdělávání, dlouhé roky vedl vzdělávací centrum TEREZA a napsal knížku Klima je příležitost."
+    summary: "Píše a pomáhá zaměřovat texty na podstatné, přednáší a vystupuje okolo témat změny klimatu a dekarbonizace. Napsal knížku [Klima je příležitost](https://klimajeprilezitost.cz/). Dříve se věnoval environmentálnímu vzdělávání, dlouhé roky vedl vzdělávací centrum TEREZA."
     img: "petr-danis.jpg"
     email: "petr.danis@faktaoklimatu.cz"
     linkedin: "https://www.linkedin.com/in/petr-danis/"
