--- a/_data/organization-members.yml
+++ b/_data/organization-members.yml
@@ -52,7 +52,7 @@
 
   - id: "petr-danis"
     name: "Petr Daniš"
-    summary: "Píše a pomáhá zaměřovat texty na podstatné, přednáší a vystupuje okolo témat změny klimatu a dekarbonizace. Napsal knížku [Klima je příležitost](https://klimajeprilezitost.cz/). Dříve se věnoval environmentálnímu vzdělávání, dlouhé roky vedl vzdělávací centrum TEREZA."
+    summary: "Píše a pomáhá zaměřovat texty na to podstatné, přednáší a vystupuje okolo témat změny klimatu a dekarbonizace. Napsal knížku [Klima je příležitost](https://klimajeprilezitost.cz/). Dříve se věnoval environmentálnímu vzdělávání, dlouhé roky vedl vzdělávací centrum TEREZA."
     img: "petr-danis.jpg"
     email: "petr.danis@faktaoklimatu.cz"
     linkedin: "https://www.linkedin.com/in/petr-danis/"
