--- a/_config.local.yml
+++ b/_config.local.yml
@@ -30,6 +30,7 @@ slugs:
   how-to-use: jak-pouzivat
   further-sources: zdroje
   about: o-nas
+  hiring: hledame-COO
 
 collections_dir: collections
 # Set permalinks in local language
