Úprava URL datujme, přidán účet bluesky

--- a/_config.local.yml
+++ b/_config.local.yml
@@ -11,9 +11,10 @@ facebook: "faktaoklimatu"
 linkedin: "68480136"
 instagram: "faktaoklimatu"
 threads: "faktaoklimatu"
+bluesky: "faktaoklimatu.cz"
 youtube: "UCpW-nPyjH68BUfAjzhk7O_Q"
 newsletter: "9-54057be166928eb6fcc57504dc847797"
-fundraising: "https://www.darujme.cz/projekt/1203742"
+fundraising: "https://www.darujme.cz/projekt/1203742?utm_source=web_obecny_cz&utm_medium=web&utm_campaign=general_2025"
 author: faktaoklimatu.cz
 copyright: "Otevřená data o klimatu, z. ú."
 description: Shromažďujeme data o klimatu a klimatické změně, která poskytují vědecké instituce a zpracováváme z nich grafy a infografiky pro další použití.
