--- a/_config.local.yml
+++ b/_config.local.yml
@@ -79,3 +79,6 @@ kramdown:
   math_engine: katex
   smart_quotes: sbquo,lsquo,bdquo,ldquo
   footnote_backlink: "↩︎"
+
+local-scripts:
+  - "/assets-local/js/dotaznik.js"
