--- a/_config.local.yml
+++ b/_config.local.yml
@@ -80,5 +80,7 @@ kramdown:
   smart_quotes: sbquo,lsquo,bdquo,ldquo
   footnote_backlink: "↩︎"
 
-local-scripts:
-  - "/assets-local/js/dotaznik.js"
+local-scripts:[] 
+# Place language-specific JS files here
+# Example: - "/assets-local/js/dotaznik.js"
+
