Odkaz na PR místo názvu souboru

--- a/_config.local.yml
+++ b/_config.local.yml
@@ -80,7 +80,6 @@ kramdown:
   smart_quotes: sbquo,lsquo,bdquo,ldquo
   footnote_backlink: "↩︎"
 
+# Place language-specific JS files here such as a script for running a survey form.
+# See https://github.com/faktaoklimatu/web-cz/pull/1394 for a survey form implementation.
 local-scripts: []
-# Place language-specific JS files here
-# Example: - "/assets-local/js/dotaznik.js"
-
