--- a/_data/organization-members.yml
+++ b/_data/organization-members.yml
@@ -6,17 +6,26 @@
   - id: "ondras-pribyla"
     name: "Ondráš Přibyla"
     position: "Zakladatel a ředitel"
-    summary: "Teoretický fyzik, který se léta zabýval komunikací a navigací v komplexních systémech. Vede náš tým a přednáší o tématu klimatických změn na univerzitách i ve firmách. Věnuje se zejména fyzikální podstatě problému a strategii transformace v kontextu ČR i Evropy."
+    summary: "Vede náš tým. Přednáší o tématu klimatických změn na univerzitách i ve firmách a je naší hlavní mediální tváří. Konzultuje strategické kroky v dekarbonizaci. Za svou práci obdržel spolu s týmem Cenu za komunikaci globální změny klimatu (2020) a Cenu Josefa Vavrouška (2022)."
     img: "ondras-pribyla.jpg"
     email: "ondras.pribyla@faktaoklimatu.cz"
     phone: "+420 775 988 882"
     linkedin: "https://www.linkedin.com/in/ondr%C3%A1%C5%A1-p%C5%99ibyla-b4b90022/"
     twitter: "https://twitter.com/OPribyla"
 
+  - id: "zdenek-daniel"
+    name: "Zdeněk Daniel"
+    position: "Provozní ředitel"
+    summary: "Má na starosti finanční řízení, projektové řízení, vedení a rozvoj lidí a pokrývá provozní témata. Společně s Ondrášem hledá cesty, jak organizaci dále posilovat tak, aby co nejlépe dosahovala svých cílů."
+    img: "zdenek-daniel.jpg"
+    email: "zdenek.daniel@faktaoklimatu.cz"
+    phone: "+420 606 728 940"
+    linkedin: "https://www.linkedin.com/in/zdenek-daniel/"
+
   - id: "kristi-psorn-zakopcanova"
     name: "Kristi Pšorn Zákopčanová"
     name_formal: "Kristína Pšorn Zákopčanová"
-    position: "Vizualizační guru"
+    position: "Vedoucí designu a grafiky"
     summary: "Její práci vidíte na většině našich infografik – zabývá se analýzou a vizuální komunikací dat a informací. Pracuje také v datovém týmu iRozhlasu a konzultuje pro PAQ Research. Za svou práci [dostala](https://www.irozhlas.cz/zivotni-styl/novinarska-cena-2021-irozhlas-inovativni-zurnalistika-seznam_2206241001_sam) _Cenu za inovativní online žurnalistiku_."
     img: "kristi-zakopcanova.jpg"
     email: "kristi.zakopcanova@faktaoklimatu.cz"
@@ -25,12 +34,23 @@
 
   - id: "jan-krcal"
     name: "Jan Krčál"
-    position: "Analytik"
+    position: "Vedoucí analytik"
     summary: "Věnuje se energetice a modelování scénářů její transformace. Mimo to zpracoval řadu výstupů k emisím skleníkových plynů. Dříve pracoval v základním výzkumu okolo stochastických modelů, a také jako inženýr v Googlu."
     img: "jan-krcal.jpg"
     email: "jan.krcal@faktaoklimatu.cz"
+    phone: "+420 608 158 653"
     linkedin: "https://www.linkedin.com/in/jan-krcal/"
     twitter: "https://twitter.com/krcal_jan"
+  
+  - id: "michal-berg"
+    name: "Michal Berg"
+    position: "Fundraising a partnerství"
+    summary: "Zodpovídá za rozvoj strategických partnerství a dárcovských programů, které zajišťují udržitelnost projektu Fakta o klimatu a rozšiřují jeho společenský dopad. Zaměřuje se na propojování světa byznysu, veřejné správy a občanské společnosti v zájmu klimatické odpovědnosti."
+    img: "michal-berg.jpg"
+    email: "michal.berg@faktaoklimatu.cz"
+    phone: "+420 603 102 284"
+    linkedin: "https://www.linkedin.com/in/michalberg/"
+    twitter: "https://x.com/MichalBerg"
 
   - id: "katerina-kolouchova"
     name: "Kateřina Kolouchová"
@@ -38,6 +58,7 @@
     summary: "Zabývá se klimatickou politikou a legislativou na úrovni ČR a EU. Mimo to se věnuje analýze a vizualizaci dat, s praxí i z komerční sféry. Vystudovala hospodářskou politiku a mezinárodní vztahy."
     img: "katka-kolouchova.jpg"
     email: "katerina.kolouchova@faktaoklimatu.cz"
+    phone: "+420 735 951 410"
     linkedin: "https://www.linkedin.com/in/kate%C5%99ina-kolouchov%C3%A1-b655a02ba/"
     twitter: "https://twitter.com/katkolouchova"
 
@@ -52,6 +73,7 @@
 
   - id: "petr-danis"
     name: "Petr Daniš"
+    position: "Autor a lektor"
     summary: "Píše a pomáhá zaměřovat texty na to podstatné, přednáší a vystupuje okolo témat změny klimatu a dekarbonizace. Napsal knížku [Klima je příležitost](https://klimajeprilezitost.cz/). Dříve se věnoval environmentálnímu vzdělávání, dlouhé roky vedl vzdělávací centrum TEREZA."
     img: "petr-danis.jpg"
     email: "petr.danis@faktaoklimatu.cz"
@@ -86,8 +108,8 @@
 
   - id: "zbynek-stajer"
     name: "Zbyněk Štajer"
-    position: "Analytik"
-    summary: "Jako analytik se věnuje zejména dopravě a energetice. Pro přístup ke komplexním problémům využívá design thinking a zkušenosti získané z konzultantské kariéry."
+    position: "Projektový manažer"
+    summary: "Věnuje se zejména dopravě a energeticenaly. Pro přístup ke komplexním problémům využívá design thinking a zkušenosti získané z konzultantské kariéry."
     img: "zbynek-stajer.jpg"
     email: "zbynek.stajer@faktaoklimatu.cz"
     linkedin: "https://www.linkedin.com/in/zbynekstajer/"
@@ -105,6 +127,7 @@
     summary: "Stará se o to, aby se materiály Fakt o klimatu dostaly k novinářům, učitelům, politikům a dalším lidem, pro které mohou být užitečné v jejich práci. Kromě toho se zabývá tématem vlivu změny klimatu na extrémy počasí."
     img: "milan-vitek.jpg"
     email: "milan.vitek@faktaoklimatu.cz"
+    hone: "+420 731 724 074"
     linkedin: "https://www.linkedin.com/in/milan-v%C3%ADtek-151b456b/"
     twitter: "https://twitter.com/vitekmilan"
 
