--- a/_data/organization-members.yml
+++ b/_data/organization-members.yml
@@ -109,7 +109,7 @@
   - id: "zbynek-stajer"
     name: "Zbyněk Štajer"
     position: "Projektový manažer"
-    summary: "Věnuje se zejména dopravě a energeticenaly. Pro přístup ke komplexním problémům využívá design thinking a zkušenosti získané z konzultantské kariéry."
+    summary: "Věnuje se zejména dopravě a energetice. Pro přístup ke komplexním problémům využívá design thinking a zkušenosti získané z konzultantské kariéry."
     img: "zbynek-stajer.jpg"
     email: "zbynek.stajer@faktaoklimatu.cz"
     linkedin: "https://www.linkedin.com/in/zbynekstajer/"
