--- a/_data/organization-members.yml
+++ b/_data/organization-members.yml
@@ -190,7 +190,7 @@
 
   - id: "andy-snovakova"
     name: "Andy Snováková"
-    summary: "Podílela se na materiálech týkajících se krajiny a jejímu vztahu ke změně klimatu."
+    summary: "Podílela se na materiálech týkajících se krajiny a jejího vztahu ke změně klimatu."
     linkedin: "https://www.linkedin.com/in/alexandra-snov%C3%A1kov%C3%A1-060975264/"
 
   - id: "karolina-stollova"
