Fix typo in phone field in organization members data

--- a/_data/organization-members.yml
+++ b/_data/organization-members.yml
@@ -110,7 +110,7 @@
     summary: "Stará se o to, aby se materiály Fakt o klimatu dostaly k novinářům, učitelům, politikům a dalším lidem, pro které mohou být užitečné v jejich práci. Kromě toho se zabývá tématem vlivu změny klimatu na extrémy počasí."
     img: "milan-vitek.jpg"
     email: "milan.vitek@faktaoklimatu.cz"
-    hone: "+420 731 724 074"
+    phone: "+420 731 724 074"
     linkedin: "https://www.linkedin.com/in/milan-v%C3%ADtek-151b456b/"
     twitter: "https://twitter.com/vitekmilan"
 
